--- a/index.html
+++ b/index.html
@@ -644,4 +644,192 @@
             <div class="product-card">
                 <div class="product-image"><img src="imagenes/10012.jpg" alt="10012"></div>
                 <div class="product-code">10012</div>
-                <div class="product-quantity
+                <div class="product-quantity">4</div>
+            </div>
+
+            <!-- Productos 150 puntos -->
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15000.jpg" alt="15000"></div>
+                <div class="product-code">15000</div>
+                <div class="product-quantity">4</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15001.jpg" alt="15001"></div>
+                <div class="product-code">15001</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15003.jpg" alt="15003"></div>
+                <div class="product-code">15003</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15004.jpg" alt="15004"></div>
+                <div class="product-code">15004</div>
+                <div class="product-quantity">2</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15005.jpg" alt="15005"></div>
+                <div class="product-code">15005</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15007.jpg" alt="15007"></div>
+                <div class="product-code">15007</div>
+                <div class="product-quantity">48</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15008.jpg" alt="15008"></div>
+                <div class="product-code">15008</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15009.jpg" alt="15009"></div>
+                <div class="product-code">15009</div>
+                <div class="product-quantity">2</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15012.jpg" alt="15012"></div>
+                <div class="product-code">15012</div>
+                <div class="product-quantity">3</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15013.jpg" alt="15013"></div>
+                <div class="product-code">15013</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15015.jpg" alt="15015"></div>
+                <div class="product-code">15015</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15017.jpg" alt="15017"></div>
+                <div class="product-code">15017</div>
+                <div class="product-quantity">18</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/15018.jpg" alt="15018"></div>
+                <div class="product-code">15018</div>
+                <div class="product-quantity">1</div>
+            </div>
+
+            <!-- Productos 200 puntos -->
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20000.jpg" alt="20000"></div>
+                <div class="product-code">20000</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20003.jpg" alt="20003"></div>
+                <div class="product-code">20003</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20005.jpg" alt="20005"></div>
+                <div class="product-code">20005</div>
+                <div class="product-quantity">9</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20006.jpg" alt="20006"></div>
+                <div class="product-code">20006</div>
+                <div class="product-quantity">7</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20007.jpg" alt="20007"></div>
+                <div class="product-code">20007</div>
+                <div class="product-quantity">4</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20008.jpg" alt="20008"></div>
+                <div class="product-code">20008</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20009.jpg" alt="20009"></div>
+                <div class="product-code">20009</div>
+                <div class="product-quantity">14</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20010.jpg" alt="20010"></div>
+                <div class="product-code">20010</div>
+                <div class="product-quantity">2</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20011.jpg" alt="20011"></div>
+                <div class="product-code">20011</div>
+                <div class="product-quantity">6</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20014.jpg" alt="20014"></div>
+                <div class="product-code">20014</div>
+                <div class="product-quantity">3</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20019.jpg" alt="20019"></div>
+                <div class="product-code">20019</div>
+                <div class="product-quantity">5</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/20024.jpg" alt="20024"></div>
+                <div class="product-code">20024</div>
+                <div class="product-quantity">1</div>
+            </div>
+
+            <!-- Productos 220 puntos -->
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/22001.jpg" alt="22001"></div>
+                <div class="product-code">22001</div>
+                <div class="product-quantity">13</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/22002.jpg" alt="22002"></div>
+                <div class="product-code">22002</div>
+                <div class="product-quantity">1</div>
+            </div>
+
+            <!-- Productos 250 puntos -->
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/25000.jpg" alt="25000"></div>
+                <div class="product-code">25000</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/25001.jpg" alt="25001"></div>
+                <div class="product-code">25001</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/25002.jpg" alt="25002"></div>
+                <div class="product-code">25002</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/25004.jpg" alt="25004"></div>
+                <div class="product-code">25004</div>
+                <div class="product-quantity">1</div>
+            </div>
+
+            <!-- Productos 350 puntos -->
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/35000.jpg" alt="35000"></div>
+                <div class="product-code">35000</div>
+                <div class="product-quantity">1</div>
+            </div>
+
+            <!-- Productos 420 puntos -->
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/42000.jpg" alt="42000"></div>
+                <div class="product-code">42000</div>
+                <div class="product-quantity">1</div>
+            </div>
+            <div class="product-card">
+                <div class="product-image"><img src="imagenes/42001.jpg" alt="42001"></div>
+                <div class="product-code">42001</div>
+                <div class="product-quantity">5</div>
+            </div>
+
+        </div>
+    </div>
+</body>
+</html>
